--- a/Nadam.Lib.HtmlModules/Nadam.Lib.HtmlModules.csproj
+++ b/Nadam.Lib.HtmlModules/Nadam.Lib.HtmlModules.csproj
@@ -82,6 +82,7 @@
     <Content Include="csslib\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="jslib\bootstrap.min.js" />
+    <Content Include="jslib\colResizable-1.6.min.js" />
     <Content Include="jslib\jquery-3.1.1.min.js" />
     <Content Include="jslib\jquery-ui-1.12.1\images\ui-icons_444444_256x240.png" />
     <Content Include="jslib\jquery-ui-1.12.1\images\ui-icons_555555_256x240.png" />
@@ -98,6 +99,9 @@
     <Content Include="jslib\jquery-ui-1.12.1\jquery-ui.structure.min.css" />
     <Content Include="jslib\jquery-ui-1.12.1\jquery-ui.theme.css" />
     <Content Include="jslib\jquery-ui-1.12.1\jquery-ui.theme.min.css" />
+    <Content Include="modules\DragNDrop_Resizeable\imageGallery.css" />
+    <Content Include="modules\DragNDrop_Resizeable\imageGallery.html" />
+    <Content Include="modules\DragNDrop_Resizeable\imageGallery.js" />
     <Content Include="modules\Dropdown\Dropdown.html" />
     <Content Include="modules\Dropdown\images\my-icon_1.png" />
     <Content Include="modules\Dropdown\images\my-icon_10.png" />
@@ -107,6 +111,15 @@
     <Content Include="modules\Dropdown\images\my-icon_9.png" />
     <Content Include="modules\Dropdown\Nadam-Dropdown.css" />
     <Content Include="modules\Dropdown\Nadam-Dropdown.js" />
+    <Content Include="modules\Focuslayer\Focuslayer.html" />
+    <Content Include="modules\Focuslayer\Images\99.jpg" />
+    <Content Include="modules\Focuslayer\Images\Budapest-Header.jpg" />
+    <Content Include="modules\Focuslayer\Images\guidet-tur-1.jpg" />
+    <Content Include="modules\Focuslayer\Images\imbudapestbuilding 1600.jpg" />
+    <Content Include="modules\Focuslayer\Nadam-Focuslayer.css" />
+    <Content Include="modules\Focuslayer\Nadam-Focuslayer.js" />
+    <Content Include="modules\Menus\Menus.html" />
+    <Content Include="modules\Menus\Nadam-StickyNavbar.css" />
     <Content Include="modules\SliderApp\Nadam-SliderApp.css" />
     <Content Include="modules\SliderApp\Nadam-SliderApp.js" />
     <Content Include="modules\SliderApp\SliderApp.html" />
