--- a/Nadam.Lib.HtmlModules/Nadam.Lib.HtmlModules.csproj
+++ b/Nadam.Lib.HtmlModules/Nadam.Lib.HtmlModules.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Nadam.Lib.HtmlModules.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -66,6 +67,27 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="modules\NadamCheckbox\Nadam-Checkbox.css" />
+    <Content Include="modules\NadamCheckbox\Nadam-Checkbox.html" />
+    <Content Include="modules\NadamCheckbox\Nadam-Checkbox.js" />
+    <Content Include="modules\NadamFocuslayer\Gifs\Ajax_loader_gray_256.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\c7a445575f01571e8dfbd72603689dcd.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\eMNHN3y.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\giphy.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\HV8RABd.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\I6QPAk2.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\loading.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\LoadingCircle_finalani.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\Loading_icon.gif" />
+    <Content Include="modules\NadamFocuslayer\Gifs\T3Ht7S3.gif" />
+    <Content Include="modules\NadamFocuslayer\Images\city_1.jpg" />
+    <Content Include="modules\NadamFocuslayer\Images\city_2.jpg" />
+    <Content Include="modules\Forms\Forms.html" />
+    <Content Include="modules\NadamMenus\Gifs\HV8RABd.gif" />
+    <Content Include="modules\NadamMenus\Images\city_1.jpg" />
+    <Content Include="modules\NadamMenus\Nadam-Menus.js" />
+    <Content Include="nadam-widgets.css" />
+    <Content Include="nadam-widgets.js" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -102,32 +124,32 @@
     <Content Include="modules\DragNDrop_Resizeable\imageGallery.css" />
     <Content Include="modules\DragNDrop_Resizeable\imageGallery.html" />
     <Content Include="modules\DragNDrop_Resizeable\imageGallery.js" />
-    <Content Include="modules\Dropdown\Dropdown.html" />
-    <Content Include="modules\Dropdown\images\my-icon_1.png" />
-    <Content Include="modules\Dropdown\images\my-icon_10.png" />
-    <Content Include="modules\Dropdown\images\my-icon_3.png" />
-    <Content Include="modules\Dropdown\images\my-icon_5.png" />
-    <Content Include="modules\Dropdown\images\my-icon_6.png" />
-    <Content Include="modules\Dropdown\images\my-icon_9.png" />
-    <Content Include="modules\Dropdown\Nadam-Dropdown.css" />
-    <Content Include="modules\Dropdown\Nadam-Dropdown.js" />
-    <Content Include="modules\Focuslayer\Focuslayer.html" />
-    <Content Include="modules\Focuslayer\Images\99.jpg" />
-    <Content Include="modules\Focuslayer\Images\Budapest-Header.jpg" />
-    <Content Include="modules\Focuslayer\Images\guidet-tur-1.jpg" />
-    <Content Include="modules\Focuslayer\Images\imbudapestbuilding 1600.jpg" />
-    <Content Include="modules\Focuslayer\Nadam-Focuslayer.css" />
-    <Content Include="modules\Focuslayer\Nadam-Focuslayer.js" />
-    <Content Include="modules\Menus\Menus.html" />
-    <Content Include="modules\Menus\Nadam-StickyNavbar.css" />
-    <Content Include="modules\SliderApp\Nadam-SliderApp.css" />
-    <Content Include="modules\SliderApp\Nadam-SliderApp.js" />
-    <Content Include="modules\SliderApp\SliderApp.html" />
-    <Content Include="modules\Spriting\images\social-media.png" />
-    <Content Include="modules\Spriting\images\technology-and-hardware.png" />
-    <Content Include="modules\Spriting\Nadam-Spriter.css" />
-    <Content Include="modules\Spriting\Nadam-Spriter.js" />
-    <Content Include="modules\Spriting\Spriter.html" />
+    <Content Include="modules\NadamDropdown\Dropdown.html" />
+    <Content Include="modules\NadamDropdown\images\my-icon_1.png" />
+    <Content Include="modules\NadamDropdown\images\my-icon_10.png" />
+    <Content Include="modules\NadamDropdown\images\my-icon_3.png" />
+    <Content Include="modules\NadamDropdown\images\my-icon_5.png" />
+    <Content Include="modules\NadamDropdown\images\my-icon_6.png" />
+    <Content Include="modules\NadamDropdown\images\my-icon_9.png" />
+    <Content Include="modules\NadamDropdown\Nadam-Dropdown.css" />
+    <Content Include="modules\NadamDropdown\Nadam-Dropdown.js" />
+    <Content Include="modules\NadamFocuslayer\Focuslayer.html" />
+    <Content Include="modules\NadamFocuslayer\Images\99.jpg" />
+    <Content Include="modules\NadamFocuslayer\Images\Budapest-Header.jpg" />
+    <Content Include="modules\NadamFocuslayer\Images\guidet-tur-1.jpg" />
+    <Content Include="modules\NadamFocuslayer\Images\imbudapestbuilding 1600.jpg" />
+    <Content Include="modules\NadamFocuslayer\Nadam-Focuslayer.css" />
+    <Content Include="modules\NadamFocuslayer\Nadam-Focuslayer.js" />
+    <Content Include="modules\NadamMenus\Menus.html" />
+    <Content Include="modules\NadamMenus\Nadam-Menus.css" />
+    <Content Include="modules\NadamSliderApp\Nadam-SliderApp.css" />
+    <Content Include="modules\NadamSliderApp\Nadam-SliderApp.js" />
+    <Content Include="modules\NadamSliderApp\SliderApp.html" />
+    <Content Include="modules\NadamSpriting\images\social-media.png" />
+    <Content Include="modules\NadamSpriting\images\technology-and-hardware.png" />
+    <Content Include="modules\NadamSpriting\Nadam-Spriter.css" />
+    <Content Include="modules\NadamSpriting\Nadam-Spriter.js" />
+    <Content Include="modules\NadamSpriting\Spriter.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
