test enviourment implementaion started

--- a/Nadam.Lib/Nadam.Lib.csproj
+++ b/Nadam.Lib/Nadam.Lib.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExtensionsLib.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Graph\Graph.cs" />
     <Compile Include="Graph\GraphNode.cs" />
     <Compile Include="Graph\Node.cs" />
-    <Compile Include="PredicatesLib.cs" />
+    <Compile Include="Predicates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
