--- a/NadamLib.Tests/NadamLib.Tests.csproj
+++ b/NadamLib.Tests/NadamLib.Tests.csproj
@@ -53,18 +53,26 @@
     <Compile Include="ExtensionsLibTests.cs" />
     <Compile Include="PredicatesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestModels\Color.cs" />
+    <Compile Include="TestModels\ColorEnum.cs" />
     <Compile Include="TestModels\ColorClass.cs" />
+    <Compile Include="TestModels\TestDataEntityTableSeeder.cs" />
     <Compile Include="TestModels\TestDataEntity.cs" />
     <Compile Include="TestModels\TestDataSeed.cs" />
     <Compile Include="TestModels\UnitTestingModelBase.cs" />
     <Compile Include="TestModels\UnitTestingModelType.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Nadam.ConsoleTest\Nadam.ConsoleTest.csproj">
+      <Project>{896D0B96-25FB-4708-A150-E9F07D3AA5EA}</Project>
+      <Name>Nadam.ConsoleTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Nadam.Lib\Nadam.Lib.csproj">
       <Project>{6f9afe40-62c2-4d40-b143-8aa81bc0c926}</Project>
       <Name>Nadam.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="app_data\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
