--- a/NadamLib.Tests/NadamLib.Tests.csproj
+++ b/NadamLib.Tests/NadamLib.Tests.csproj
@@ -51,7 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ExtensionsLibTests.cs" />
-    <Compile Include="PredicatesTests.cs" />
+    <Compile Include="BinaryPredicatesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestModels\ColorEnum.cs" />
     <Compile Include="TestModels\ColorClass.cs" />
