--- a/Nadam.ConsoleTest/Nadam.ConsoleTest.csproj
+++ b/Nadam.ConsoleTest/Nadam.ConsoleTest.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -65,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nadam.Lib.JsonDb\Nadam.Lib.JsonDb.csproj">
@@ -74,6 +81,10 @@
     <ProjectReference Include="..\Nadam.Lib\Nadam.Lib.csproj">
       <Project>{6f9afe40-62c2-4d40-b143-8aa81bc0c926}</Project>
       <Name>Nadam.Lib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Northwind\NorthwindEF.csproj">
+      <Project>{6fce91ad-07f5-47ce-818c-fc29c8278fcc}</Project>
+      <Name>NorthwindEF</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
