--- a/Northwind/App.Config
+++ b/Northwind/App.Config
@@ -6,20 +6,21 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="NORTHWNDEntities" 
 		 connectionString="
 			metadata=res://*/NorthwindDb.csdl|res://*/NorthwindDb.ssdl|res://*/NorthwindDb.msl;
 			provider=System.Data.SqlClient;
-			provider connection string=&quot;data source=(localdb);
+			provider connection string=&quot;
+        data source=.\SQLEXPRESS;
 				initial catalog=NORTHWND;
 				integrated security=True;
 				MultipleActiveResultSets=True;
 				App=EntityFramework;
-				AttachDBFileName=|DataDirectory|Northwind.MDF;
-				&quot;" 
+				AttachDBFileName=C:\Documents\GitRepositories\Nadam.Lib\Northwind\App_Data\Northwind.mdf;
+			&quot;" 
 		 providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 	
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
