--- a/Nadam.ConsoleTest/App.config
+++ b/Nadam.ConsoleTest/App.config
@@ -1,49 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <!--<connectionStrings>
-		-->
-  <!--<add name="NorthwindLocaldb"
-		     connectionString="Data Source=(localdb);AttachDbFilename=|DataDirectory|\MyDatabase.mdf;"
-		     providerName="System.Data.SqlClient"/>-->
-  <!--
 
-		<add name="NORTHWNDEntities" 
-			 connectionString="provider=System.Data.SqlClient;
-				 provider connection string=&quot;
-				 data source=(localdb);initial catalog=NORTHWND;
-				 integrated security=True;
-				 MultipleActiveResultSets=True;
-				 App=EntityFramework&quot;" 
-			 providerName="System.Data.EntityClient" />
-
-	</connectionStrings>-->
-
-	<connectionStrings>
-		<add name="NORTHWNDEntities"
-		     connectionString="
-			metadata=res://*/NorthwindDb.csdl|res://*/NorthwindDb.ssdl|res://*/NorthwindDb.msl;
-			provider=System.Data.SqlClient;
-			provider connection string=&quot;data source=(localdb);
-				initial catalog=NORTHWND;
-				integrated security=True;
-				MultipleActiveResultSets=True;
-				App=EntityFramework;
-				AttachDBFileName=|DataDirectory|Northwind.MDF;
-				&quot;"
-		     providerName="System.Data.EntityClient" />
-	</connectionStrings>
-	
+  <connectionStrings>
+    <add name="NorthwindCodeFirst"
+      providerName="System.Data.SqlClient"
+      connectionString="Data Source=.\SQLEXPRESS;AttachDbFileName=|datadirectory|\app_data\Northwind.mdf;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True" />
+  </connectionStrings>
+  
   <appSettings>
-    <add key="TestJsonDbRoot" value="C:\Users\nadam\TestJsonDb" />
-    <add key="MivJsonDbExtension" value="C:\Users\nadam\MivJsonDbExtension" />
+    <add key="TestJsonDbRoot" value=".\TestJsonDb" />
+    <add key="MivJsonDbExtension" value=".\MivJsonDbExtension" />
   </appSettings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -54,4 +31,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 </configuration>
