--- a/source/Nadam.Lib/Nadam.Lib.csproj
+++ b/source/Nadam.Lib/Nadam.Lib.csproj
@@ -28,8 +28,9 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\..\dist\</OutputPath>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Nadam.Lib.XML</DocumentationFile>
@@ -47,9 +48,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleShell\CommandType.cs" />
-    <Compile Include="ConsoleShell\ConsoleCommandAttribute.cs" />
-    <Compile Include="ConsoleShell\IgnoreAsCommandAttribute.cs" />
     <Compile Include="OtherExtensions.cs" />
     <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="FilterExtensions.cs" />
