--- a/source/Nadam.TestServiceLibrary/Nadam.TestServiceLibrary.csproj
+++ b/source/Nadam.TestServiceLibrary/Nadam.TestServiceLibrary.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Nadam.ConsoleShell\Nadam.ConsoleShell.csproj">
+      <Project>{a2250fcd-db21-444a-8200-925b79c616d6}</Project>
+      <Name>Nadam.ConsoleShell</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Nadam.Lib\Nadam.Lib.csproj">
       <Project>{6f9afe40-62c2-4d40-b143-8aa81bc0c926}</Project>
       <Name>Nadam.Lib</Name>
