some lot of shit

--- a/source/OtherConsole/OtherConsole.csproj
+++ b/source/OtherConsole/OtherConsole.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultCommands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,6 +53,10 @@
     <ProjectReference Include="..\Nadam.ConsoleShell\Nadam.ConsoleShell.csproj">
       <Project>{a2250fcd-db21-444a-8200-925b79c616d6}</Project>
       <Name>Nadam.ConsoleShell</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nadam.TestServiceLibrary\Nadam.TestServiceLibrary.csproj">
+      <Project>{2e5a2434-9c74-4456-a705-0506e924e35a}</Project>
+      <Name>Nadam.TestServiceLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
