--- a/source/Nadam.JsonDb.Test/JsonDb.UTests.csproj
+++ b/source/Nadam.JsonDb.Test/JsonDb.UTests.csproj
@@ -73,13 +73,13 @@
     <Compile Include="TestHelpers\SimpleDb\SimpleModel\DimensionC.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Nadam.JsonDb\Nadam.JsonDb.csproj">
+    <ProjectReference Include="..\Nadam.JsonDb\Nadam.Global.JsonDb.csproj">
       <Project>{015537B7-AFAA-480D-872D-FAEC01ADF045}</Project>
-      <Name>Nadam.JsonDb</Name>
+      <Name>Nadam.Global.JsonDb</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Nadam.Lib\Nadam.Lib.csproj">
+    <ProjectReference Include="..\Nadam.Lib\Nadam.Global.Lib.csproj">
       <Project>{6f9afe40-62c2-4d40-b143-8aa81bc0c926}</Project>
-      <Name>Nadam.Lib</Name>
+      <Name>Nadam.Global.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
