console app development, clearing solution

--- a/source/Nadam.ConsoleShell/Nadam.Global.ConsoleShell.csproj
+++ b/source/Nadam.ConsoleShell/Nadam.Global.ConsoleShell.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Nadam.Global.ConsoleShell</RootNamespace>
-    <AssemblyName>Nadam.ConsoleShell</AssemblyName>
+    <AssemblyName>Nadam.Global.ConsoleShell</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
