changing graph implementation-not finished

--- a/source/Nadam.JsonDb/Nadam.Global.JsonDb.csproj
+++ b/source/Nadam.JsonDb/Nadam.Global.JsonDb.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="DatabaseGraph\DbModelGraph.cs" />
     <Compile Include="DatabaseGraph\DatabaseGraphDependencyEnumerator.cs" />
-    <Compile Include="DatabaseGraph\TableNode.cs" />
+    <Compile Include="DatabaseGraph\DbTable.cs" />
     <Compile Include="FileUtility.cs" />
     <Compile Include="JsonDbContextExtensions.cs" />
     <Compile Include="JsonDbEngineContext.cs" />
