--- a/source/Nadam.Lib/Nadam.Global.Lib.csproj
+++ b/source/Nadam.Lib/Nadam.Global.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{015537B7-AFAA-480D-872D-FAEC01ADF045}</ProjectGuid>
+    <ProjectGuid>{6F9AFE40-62C2-4D40-B143-8AA81BC0C926}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nadam.JsonDb</RootNamespace>
-    <AssemblyName>Nadam.Lib.JsonDb</AssemblyName>
+    <RootNamespace>Nadam.Global.Lib</RootNamespace>
+    <AssemblyName>Nadam.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -24,23 +24,18 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\dist\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\Nadam.Lib\bin\Release\Nadam.Lib.JsonDb.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Nadam.Lib.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
@@ -53,23 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common.cs" />
-    <Compile Include="DatabaseGraph\DbModelGraph.cs" />
-    <Compile Include="DatabaseGraph\DatabaseGraphDependencyEnumerator.cs" />
-    <Compile Include="DatabaseGraph\TableNode.cs" />
-    <Compile Include="FileUtility.cs" />
-    <Compile Include="JsonDbContextExtensions.cs" />
-    <Compile Include="JsonDbEngineContext.cs" />
+    <Compile Include="DirectedGraph\DirectedEdge.cs" />
+    <Compile Include="DirectedGraph\DirectedGraph.cs" />
+    <Compile Include="DirectedGraph\IDirectedGraph.cs" />
+    <Compile Include="Graph\Edge.cs" />
+    <Compile Include="Graph\IGraph.cs" />
+    <Compile Include="ConsoleShell\ConsoleCommandAttribute.cs" />
+    <Compile Include="OtherExtensions.cs" />
+    <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="FilterExtensions.cs" />
+    <Compile Include="Graph\Graph.cs" />
+    <Compile Include="Graph\Node.cs" />
+    <Compile Include="Predicates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Nadam.Lib\Nadam.Lib.csproj">
-      <Project>{6f9afe40-62c2-4d40-b143-8aa81bc0c926}</Project>
-      <Name>Nadam.Lib</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
