--- a/source/Nadam.JsonDb/Nadam.Global.JsonDb.csproj
+++ b/source/Nadam.JsonDb/Nadam.Global.JsonDb.csproj
@@ -54,8 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
-    <Compile Include="DatabaseGraph\DbModelGraph.cs" />
+    <Compile Include="DatabaseGraph\RelationalDatabaseGraph.cs" />
     <Compile Include="DatabaseGraph\DbModelGraphDependencyEnumerator.cs" />
+    <Compile Include="DatabaseGraph\IRelationalDatabaseGraph.cs" />
     <Compile Include="FileUtility.cs" />
     <Compile Include="JsonDbContextExtensions.cs" />
     <Compile Include="JsonDbEngineContext.cs" />
