--- a/source/Nadam.Lib/Nadam.Global.Lib.csproj
+++ b/source/Nadam.Lib/Nadam.Global.Lib.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Graph\Node.cs" />
     <Compile Include="Predicates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tree\Iterators\LevelOrderEnumerator.cs" />
+    <Compile Include="Tree\Iterators\PostOrderTreeEnumerator.cs" />
+    <Compile Include="Tree\Iterators\PreOrderTreeEnumerator.cs" />
+    <Compile Include="Tree\ITree.cs" />
+    <Compile Include="Tree\Tree.cs" />
+    <Compile Include="Tree\TreeNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
